--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
-.idea/
+### OSX ###
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+__pycache__/
+local_settings.py
+
+.env
+db.sqlite3
+
+# PyBuilder
+target/
+
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
+.env
+db.sqlite3
+
+media/
+
+.idea/
+.mysite/settings.py
+
